changelog
    version 2.0.8
        - fix plotwf warning color 
        
   version 2.0.7       
        - Added SE Replacement method (SYSargsList)
        - writeTargetsout and alignStats: small fix
        - symLink2bam: added named character vector alternative as input
        - renderLogs: small fix for the Title
        - Reorganized `SPRproject` function internal execution 
        - Update SYSargsList man page
        - Exported 'addResources' method
        - Fixed a small bug yamlinput replacement method
        - Fixing time when `resume = TRUE` 
        
   version 2.0.5
        - Bug fixed plotWF
        - management and compute running option names
        - Fixing message moduleload() windows system
        - renameStep accepts the same name
        - dependency replacement method accepts NA
        - SYSargsList accepts `targets = SE` object
        - Fixed log/SE path        
        - Added SE Replacement method (SYSargsList)
        - writeTargetsout and alignStats: small fix
        - symLink2bam: added named character vector alternative as input
        - renderLogs: small fix for the Title
        - Reorganized `SPRproject` function internal execution 
        - Update SYSargsList man page
        - Exported 'addResources' method
        - Fixed a small bug yamlinput replacement method
        - Fixing time when `resume = TRUE`
        
   version 2.0.4
        - Bug fixed pathInstance and runWF
        
   version 2.0.3
   	- plotWF panel control options
        - runCommnadline bug fixed
   	
   version 2.0.2
        - runInfo Replacement method update
        - runWF remote option added
        - Allows targets subset with runWF 
        - Improved running time when targets subset
        - R code can be submitted to compute node
        
   version 2.0.1
        - yamlinput methods update
        - preprocessReads updated
        - runCommandline function: 
            - Fixed status/file.exists dataframe;