@@ -1,6 +1,7 @@
 changelog
     version 2.0.8
         - fix plotwf warning color 
+        - Updated help files
         
    version 2.0.7       
         - Added SE Replacement method (SYSargsList)
